--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "spotify-web-api-node": "^5.0.2"
+    "request": "^2.88.2"
   }
 }
