--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/spotify-web-playback-sdk": "^0.1.15",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
